Add Margin on resume button

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     <div class="col-2">
                         <button id="btnEdit" type="button" class="btn btn-primary btn-sm">Edit</button>
                     </div>
-                    <div class="col-2">
+                    <div class="col-2 ms-2">
                         <button type="button" class="btn btn-outline-success btn-sm">Resume</button>
                     </div>
                 </div>               
