Fix margin, add shadow

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
     </nav>
 
-    <div class="container border border-2 bg-white mt-3 mb-3 p-3 rounded">
+    <div class="container border bg-white mt-3 mb-3 p-3 rounded shadow">
         <div id="alertSuccessPlaceholder"></div>
 
         <div class="row">
@@ -75,7 +75,7 @@
         </div>
     </div>
 
-    <div id="containerEditForm" class="container border border-2 bg-white p-3 rounded">
+    <div id="containerEditForm" class="container border bg-white mb-3 p-3 rounded shadow">
         <div class="row">
             <div class="col">
                 <form id="editForm" action="" style="width: inherit;">
