Fix responsivity and margin

--- a/index.html
+++ b/index.html
@@ -25,30 +25,22 @@
     </nav>
 
     <div class="container border bg-white mt-3 mb-3 p-3 rounded shadow">
-        <div id="alertSuccessPlaceholder"></div>
+        <div id="alertSuccessPlaceholder" class="mt-2"></div>
 
         <div class="row">
-            <div class="col-md-3">
+            <div class="col-md-3 mt-2" style="text-align: center;">
                 <img class="rounded-circle" src="https://picsum.photos/150/150" alt="profile pic">
             </div>
-            <div class="col-md-4">
-                <div class="row">
-                    <h2 id="namaBio">
-                        Muhammad Alif Putra Dafi <br>
-                    </h2>
-                    <h5 id="roleBio" class="text-muted mb-3">Associate Software Engineer</h5>
-                </div>
-
-                <div class="row">
-                    <div class="col-2">
-                        <button id="btnEdit" type="button" class="btn btn-primary btn-sm">Edit</button>
-                    </div>
-                    <div class="col-2 ms-2">
-                        <button type="button" class="btn btn-outline-success btn-sm">Resume</button>
-                    </div>
-                </div>               
+            <div class="col-md-4 mt-2">
+                <h2 id="namaBio">
+                    Muhammad Alif Putra Dafi <br>
+                </h2>
+                <h5 id="roleBio" class="text-muted mb-3">Associate Software Engineer</h5>
+                
+                <button id="btnEdit" type="button" class="btn btn-primary btn-sm mb-3">Edit</button>
+                <button type="button" class="btn btn-outline-success btn-sm mb-3">Resume</button>             
             </div>
-            <div class="col-md-5">
+            <div class="col-md-5 mt-2">
                 <table class="table-primary table-borderless" style="border-collapse: separate; border-spacing: 5px;">
                     <tr>
                         <th style="padding-right: 40px;">Availability</th>
